# rustnet

./: Cargo.toml  LICENSE  README.md
data/: test.csv  train.csv
saves/: After  Testo
src/: activation.rs  layer.rs  lib.rs  loss.rs  main.rs  neural_network.rs
src/csv_loader/: mod.rs
src/lib/: csv_loader.rs  math.rs  matrix.rs  network_parser.rs  safe_f64.rs
src/math/: mod.rs
src/matrix/: mod.rs
src/neural/: network.rs
src/neural/layer/: layer.rs  linear.rs
src/neural_layer/: mod.rs
src/neural_network/: mod.rs
