[package]
name = "neural-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.1"
csv = "1.3.0"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
lazy_static = { version = "1.4.0", features = [] }
serde = { version = "1.0.203", features = ["derive"] }
bincode = "2.0.0-rc.3"
serde_json = "1.0.117"
