[package]
name = "scorch"
version = "0.1.0"
edition = "2021"
authors = ["Sa4dUs"]
description = "A straightforward and customizable neural network crate, built for machine learning tasks."
documentation = "https://docs.rs/scorch/"
repository = "https://github.com/sa4dus/scorch"
license-file = "LICENSE"
exclude = ["tests/*", "examples/*", "data/*"]

[lib]
name = "scorch"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
