[package]
name = "scorch"
version = "0.1.1"
edition = "2024"
authors = ["Sa4dUs"]
license = "MIT"
description = "A straightforward and customizable neural network crate, built for machine learning tasks."
documentation = "https://docs.rs/scorch/"
repository = "https://github.com/sa4dus/scorch"
exclude = ["tests/*", "examples/*", "data/*"]

[lib]
name = "scorch"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
